--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wang</groupId>
+  <groupId>net.tinybrick</groupId>
   <artifactId>integration-zookeeper</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>integration-zookeeper</name>
@@ -9,14 +9,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.11</junit.version>
-		<spring.boot.version>1.2.5.RELEASE</spring.boot.version>
+		<spring.boot.version>1.3.0.RELEASE</spring.boot.version>
 	    <utils.version>2.0.2-SNAPSHOT</utils.version>
 	    <test.version>1.0.0-SNAPSHOT</test.version>
 	</properties>
 
 	<scm>
-	    <connection>scm:git:https://github.com/meee55/integration-zookeeper.git</connection>
-	    <developerConnection>scm:git:https://github.com/meee55/integration-zookeeper.git</developerConnection>
+	    <connection>scm:git:https://github.com/tinybrick/integration-zookeeper.git</connection>
+	    <developerConnection>scm:git:https://github.com/tinybrick/integration-zookeeper.git</developerConnection>
 	</scm>
 	
 	<!-- <repositories>
@@ -111,7 +111,7 @@
 		            <artifactId>spring-boot-maven-plugin</artifactId>
 		            <version>${spring.boot.version}</version>
 		            <configuration>
-		            	<layer>NONE</layer>
+		            	<layout>NONE</layout>
 		            	<skip>true</skip>
 		            </configuration>
 				      <executions>
@@ -128,8 +128,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.0</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 
